feat: deleted Quandl based data gathering

--- a/DeepAR-StockPricesPredictions.ipynb
+++ b/DeepAR-StockPricesPredictions.ipynb
@@ -45,9 +45,7 @@
   },
   {
    "source": [
-    "Gatering data from two sources:\n",
-    "* Alpha Vantage\n",
-    "* Quandl"
+    "Gatering data from two sources Alpha Vantage API"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -298,47 +296,6 @@
    ],
    "source": [
     "df_av_amzn_ac.plot()"
-   ]
-  },
-  {
-   "source": [
-    "### Gathering data from Quandl"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
-    "Setting Quandl key"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tsk = \"EOD\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_ql_aapl = quandl.get(tsk+\"/\"+aapl, start_date=start, end_date=end)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_ql_ibm = quandl.get(tsk+\"/\"+ibm, start_date=start, end_date=end)"
    ]
   },
   {
