feat: metrics computation on SMA on IBM added

--- a/0.DataGathering.ipynb
+++ b/0.DataGathering.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "third-collar",
    "metadata": {},
    "source": [
     "## Data gathering"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "raw",
-   "id": "material-pasta",
    "metadata": {},
    "source": [
     "First step of this analysis will be stock prices data gathering from one or more sources."
@@ -18,7 +16,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "guilty-elements",
    "metadata": {},
    "source": [
     "By now, only one source will be used: Yahoo! Finance.\n",
@@ -27,7 +24,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beginning-construction",
    "metadata": {},
    "source": [
     "Gatering data from Yahoo Finance"
@@ -35,7 +31,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "numerous-nancy",
    "metadata": {},
    "source": [
     "Target symbols:"
@@ -44,7 +39,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "unsigned-watershed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +51,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cloudy-heaven",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +59,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "consistent-decade",
    "metadata": {},
    "source": [
     "Setting dataset record start date and end date:\n",
@@ -77,7 +69,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "angry-complex",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +78,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "existing-condition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +87,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tough-flash",
    "metadata": {},
    "source": [
     "## Gathering data from Yahoo! Finance"
@@ -105,7 +94,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "color-bouquet",
    "metadata": {},
    "source": [
     "Data from Yahoo! Finance."
@@ -114,7 +102,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "seasonal-opera",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +113,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "uniform-edgar",
    "metadata": {},
    "source": [
     "#### ***IBM*** data:"
@@ -135,7 +121,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "biblical-mention",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +137,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "certified-foundation",
    "metadata": {},
    "source": [
     "#### ***Apple Inc.*** data:"
@@ -161,7 +145,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "liberal-threat",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +161,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "plain-essay",
    "metadata": {},
    "source": [
     "#### ***Amazon.com Inc.*** data:"
@@ -187,7 +169,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "nervous-graduate",
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +185,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sapphire-madonna",
    "metadata": {},
    "source": [
     "#### ***Alphabet Inc.*** data:"
@@ -213,7 +193,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "necessary-warner",
    "metadata": {},
    "outputs": [
     {
@@ -227,13 +206,58 @@
    "source": [
     "df_yf_googl = yf.download(googl, start=start, end=end)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Renaming dataframes\n",
+    "\n",
+    "By now, as said before, I'll use Yahoo! Finance as the sole source of data, so, i will simply rename the dataframes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ibm = df_yf_ibm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_aapl = df_yf_aapl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_amzn = df_yf_amzn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_googl = df_yf_googl"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_p36",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_pytorch_p36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
