feat: upload data to S3 implemented

--- a/0.DataGathering.ipynb
+++ b/0.DataGathering.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "enabling-prince",
    "metadata": {},
    "source": [
     "## Data gathering"
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "raw",
+   "id": "ancient-concord",
    "metadata": {},
    "source": [
     "First step of this analysis will be stock prices data gathering from one or more sources."
@@ -16,6 +18,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "false-place",
    "metadata": {},
    "source": [
     "By now, only one source will be used: Yahoo! Finance.\n",
@@ -24,6 +27,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "european-accordance",
    "metadata": {},
    "source": [
     "Gatering data from Yahoo Finance"
@@ -31,6 +35,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "prostate-pilot",
    "metadata": {},
    "source": [
     "Target symbols:"
@@ -38,7 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
+   "id": "academic-cornwall",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +56,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
+   "id": "prescribed-girlfriend",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,6 +66,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "revolutionary-petersburg",
    "metadata": {},
    "source": [
     "Setting dataset record start date and end date:\n",
@@ -68,7 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
+   "id": "temporal-campbell",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +86,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
+   "id": "encouraging-allocation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,6 +97,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "proof-tongue",
    "metadata": {},
    "source": [
     "## Gathering data from Yahoo! Finance"
@@ -94,6 +105,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "furnished-mobility",
    "metadata": {},
    "source": [
     "Data from Yahoo! Finance."
@@ -101,7 +113,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
+   "id": "marked-assault",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,6 +126,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "solar-saturday",
    "metadata": {},
    "source": [
     "#### ***IBM*** data:"
@@ -120,7 +134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
+   "id": "fuzzy-emergency",
    "metadata": {},
    "outputs": [
     {
@@ -137,6 +152,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "polish-marshall",
    "metadata": {},
    "source": [
     "#### ***Apple Inc.*** data:"
@@ -144,7 +160,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
+   "id": "dirty-fantasy",
    "metadata": {},
    "outputs": [
     {
@@ -161,6 +178,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "filled-brother",
    "metadata": {},
    "source": [
     "#### ***Amazon.com Inc.*** data:"
@@ -168,7 +186,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
+   "id": "original-configuration",
    "metadata": {},
    "outputs": [
     {
@@ -185,6 +204,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "willing-roller",
    "metadata": {},
    "source": [
     "#### ***Alphabet Inc.*** data:"
@@ -192,7 +212,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
+   "id": "cheap-stewart",
    "metadata": {},
    "outputs": [
     {
@@ -209,6 +230,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "continued-phrase",
    "metadata": {},
    "source": [
     "# Renaming dataframes\n",
@@ -218,7 +240,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
+   "id": "small-watts",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +250,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
+   "id": "dynamic-scheduling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +260,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
+   "id": "outdoor-beads",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,19 +270,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
+   "id": "completed-desktop",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_googl = df_yf_googl"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "configured-motion",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_pytorch_p36",
    "language": "python",
-   "name": "python3"
+   "name": "conda_pytorch_p36"
   },
   "language_info": {
    "codemirror_mode": {
