chore: fix to S3 upload code

--- a/3.DeepAR-StockPricesPredictions.ipynb
+++ b/3.DeepAR-StockPricesPredictions.ipynb
@@ -3071,7 +3071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3082,14 +3082,14 @@
     "\n",
     "#Define training data location\n",
     "s3_data_key = 'stock-prices/source_data'\n",
-    "s3_bucket = session.default_bucket()\n",
+    "s3_bucket = sagemaker_session.default_bucket()\n",
     "interval = 'D' #Use D or H\n",
     "s3_output_path = \"s3://{}/{}/{}/output\".format(s3_bucket, s3_data_key, interval)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3098,7 +3098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
