--- a/3.DeepAR-StockPricesPredictions.ipynb
+++ b/3.DeepAR-StockPricesPredictions.ipynb
@@ -566,7 +566,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Creation of a training job with stand alone time series (no dynamic features provided)."
+    "Creation of a training job with stand alone time series (no dynamic features provided). Run only if no model has already been trained before."
    ]
   },
   {
@@ -590,6 +590,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Existing Model Instantiation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instatiation of a model from existing training artifacts (run only if a model has already been trained before)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "estimator = sagemaker.model.Model(\n",
+    "    model_data='{}/{}/model.tar.gz'.format(s3_output_path, 'forecasting-deepar-2021-03-07-20-20-06-397/output'),\n",
+    "    image_uri= image_name,\n",
+    "    #image=image_name,  # example path for the semantic segmentation in eu-west-1\n",
+    "    role=role)  # your role here; could be different name\n",
+    "\n",
+    "#trainedmodel.deploy(initial_instance_count=1, instance_type='ml.c4.xlarge')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Deploy and Create a Predictor\n",
     "\n",
     "Now that we have trained a model, we can use it to perform predictions by deploying it to a predictor endpoint.\n",
@@ -599,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,12 +648,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 203,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "update_endpoint is a no-op in sagemaker>=2.\n",
+      "See: https://sagemaker.readthedocs.io/en/stable/v2.html for details.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3 µs, sys: 0 ns, total: 3 µs\n",
+      "Wall time: 7.87 µs\n",
+      "-----------------!"
+     ]
+    }
+   ],
    "source": [
     "# run it once, then update the endpoint\n",
-    "%%time\n",
+    "%time\n",
+    "\n",
     "predictor = estimator.deploy(\n",
     "    initial_instance_count=1,\n",
     "    instance_type='ml.t2.medium',\n",
@@ -634,6 +682,13 @@
     "    serializer=json_serializer,\n",
     "    deserializer=json_deserializer\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Update endpoint if needed:"
    ]
   },
   {
@@ -651,7 +706,7 @@
     }
    ],
    "source": [
-    "%%time\n",
+    "%time\n",
     "\n",
     "# update an endpoint\n",
     "\n",
@@ -663,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -733,17 +788,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from source_deepar.deepar_utils import __series_to_json_obj\n",
+    "from source_deepar.deepar_utils import series_to_json_obj\n",
     "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,9 +856,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 210,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name '__series_to_json_obj' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-210-52035371c673>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# get formatted input time series\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mjson_input_ts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson_predictor_input\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_ts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# get the prediction from the predictor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-209-6f5208150f8d>\u001b[0m in \u001b[0;36mjson_predictor_input\u001b[0;34m(input_ts, target_column, dyn_feat, start, num_samples, quantiles)\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_ts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0;31m# get JSON objects for input time series\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m         \u001b[0minstances\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m__series_to_json_obj\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_ts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget_column\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtarget_column\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdyn_feat\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdyn_feat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstart\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;31m# specify the output quantiles and samples\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name '__series_to_json_obj' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# get all input and target (test) time series\n",
     "# input_ts = [df_ibm_train, df_aapl_train, df_amzn_train, df_googl_train]\n",
@@ -830,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -856,26 +924,26 @@
      "output_type": "stream",
      "text": [
       "[                   0.1         0.9         0.5\n",
-      "2021-01-07  121.835075  127.992470  125.059486\n",
-      "2021-01-08  122.355553  128.646957  124.954491\n",
-      "2021-01-09  119.964478  128.169891  124.520325\n",
-      "2021-01-10  121.023933  128.718262  124.628288\n",
-      "2021-01-11  119.816162  128.747482  124.592346\n",
-      "2021-01-12  120.824181  129.297180  125.081215\n",
-      "2021-01-13  119.372238  128.318588  124.544899\n",
-      "2021-01-14  119.224167  128.399811  123.815605\n",
-      "2021-01-15  118.401733  128.649597  123.272163\n",
-      "2021-01-16  117.649498  128.446579  122.900276\n",
-      "2021-01-17  119.322922  130.186584  123.523125\n",
-      "2021-01-18  117.754303  128.946533  122.647331\n",
-      "2021-01-19  118.098427  129.045151  123.872612\n",
-      "2021-01-20  117.775459  129.269470  122.622276\n",
-      "2021-01-21  116.197449  129.602325  123.174355\n",
-      "2021-01-22  117.485069  129.664856  123.424995\n",
-      "2021-01-23  116.223900  130.558914  123.748756\n",
-      "2021-01-24  115.928848  130.304184  124.099792\n",
-      "2021-01-25  116.006180  130.210938  123.257805\n",
-      "2021-01-26  116.588120  130.897644  123.646027]\n"
+      "2021-01-07  121.732735  128.752777  125.387764\n",
+      "2021-01-08  121.970581  129.155243  125.847977\n",
+      "2021-01-09  120.897179  127.914078  124.735115\n",
+      "2021-01-10  119.990166  128.461517  124.985794\n",
+      "2021-01-11  120.159508  128.049881  124.527077\n",
+      "2021-01-12  120.097336  129.601776  125.042023\n",
+      "2021-01-13  119.840149  129.563629  124.619591\n",
+      "2021-01-14  119.033905  128.656128  123.579094\n",
+      "2021-01-15  119.223236  128.350433  123.499306\n",
+      "2021-01-16  117.730324  128.371826  123.341614\n",
+      "2021-01-17  117.874954  129.328674  123.687904\n",
+      "2021-01-18  118.195808  130.068359  123.000916\n",
+      "2021-01-19  118.532639  129.857071  123.103737\n",
+      "2021-01-20  118.725182  131.174072  123.732292\n",
+      "2021-01-21  117.408356  129.416428  123.031570\n",
+      "2021-01-22  116.937096  130.180725  123.215073\n",
+      "2021-01-23  117.220276  128.982590  122.722649\n",
+      "2021-01-24  117.340263  130.219025  122.956421\n",
+      "2021-01-25  117.912949  129.854523  123.160736\n",
+      "2021-01-26  117.112442  129.628860  122.515289]\n"
      ]
     }
    ],
@@ -892,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -963,26 +1031,26 @@
      "output_type": "stream",
      "text": [
       "[                   0.1         0.9         0.5\n",
-      "2021-01-07  125.093613  132.763382  129.110001\n",
-      "2021-01-08  125.319176  133.149612  128.552902\n",
-      "2021-01-09  123.105209  133.478683  128.995026\n",
-      "2021-01-10  124.570038  134.422852  129.220093\n",
-      "2021-01-11  123.412041  134.891541  129.760132\n",
-      "2021-01-12  125.122711  136.418060  130.931061\n",
-      "2021-01-13  123.706871  135.310989  130.589737\n",
-      "2021-01-14  124.589447  136.117706  130.782318\n",
-      "2021-01-15  123.423264  137.367249  130.409927\n",
-      "2021-01-16  123.571732  138.207718  131.052139\n",
-      "2021-01-17  125.403740  139.851944  131.624786\n",
-      "2021-01-18  123.532669  139.180222  130.335739\n",
-      "2021-01-19  124.197906  138.609848  131.049896\n",
-      "2021-01-20  124.423309  140.104279  130.706589\n",
-      "2021-01-21  122.195633  140.038956  131.790817\n",
-      "2021-01-22  124.620186  140.600830  132.093918\n",
-      "2021-01-23  122.096970  141.768021  132.417282\n",
-      "2021-01-24  121.327774  141.081955  133.163788\n",
-      "2021-01-25  122.702339  141.449966  132.317459\n",
-      "2021-01-26  121.980942  141.936066  131.625092]\n"
+      "2021-01-07  124.966141  133.710434  129.518921\n",
+      "2021-01-08  124.867119  133.773071  129.647171\n",
+      "2021-01-09  124.385757  133.364563  129.237198\n",
+      "2021-01-10  123.272110  134.095047  129.878265\n",
+      "2021-01-11  124.112465  133.994354  129.640106\n",
+      "2021-01-12  124.415009  136.922028  130.901855\n",
+      "2021-01-13  124.572411  136.825378  130.627472\n",
+      "2021-01-14  124.404770  136.993866  130.291321\n",
+      "2021-01-15  124.076569  136.886169  130.670990\n",
+      "2021-01-16  124.076393  138.153107  131.160660\n",
+      "2021-01-17  123.285065  139.048508  131.765427\n",
+      "2021-01-18  124.370094  140.550064  130.926865\n",
+      "2021-01-19  124.946037  140.130737  130.881851\n",
+      "2021-01-20  125.189308  143.258240  132.550827\n",
+      "2021-01-21  123.472794  139.811050  131.557358\n",
+      "2021-01-22  123.124748  141.913605  131.499939\n",
+      "2021-01-23  123.020920  140.186432  131.297318\n",
+      "2021-01-24  123.628662  141.317886  131.838501\n",
+      "2021-01-25  124.427841  141.728821  131.928314\n",
+      "2021-01-26  123.563614  140.581131  130.547806]\n"
      ]
     }
    ],
@@ -999,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -1070,26 +1138,26 @@
      "output_type": "stream",
      "text": [
       "[                    0.1          0.9          0.5\n",
-      "2021-01-07  3094.219482  3265.937744  3186.451416\n",
-      "2021-01-08  3091.069092  3266.278809  3184.170898\n",
-      "2021-01-09  3084.891113  3272.152832  3176.452393\n",
-      "2021-01-10  3108.677979  3284.607910  3177.629883\n",
-      "2021-01-11  3093.076904  3285.515381  3173.991943\n",
-      "2021-01-12  3102.929443  3308.193115  3195.529541\n",
-      "2021-01-13  3092.083496  3309.724121  3194.941162\n",
-      "2021-01-14  3103.580078  3332.495117  3209.557617\n",
-      "2021-01-15  3094.831787  3315.429932  3202.861816\n",
-      "2021-01-16  3106.655029  3335.878174  3203.782471\n",
-      "2021-01-17  3081.158447  3334.591553  3210.318604\n",
-      "2021-01-18  3087.839600  3347.077637  3209.628418\n",
-      "2021-01-19  3084.959961  3369.511963  3210.942627\n",
-      "2021-01-20  3106.575195  3355.424316  3228.671631\n",
-      "2021-01-21  3113.171143  3378.174072  3235.158447\n",
-      "2021-01-22  3131.904053  3404.039795  3229.553955\n",
-      "2021-01-23  3125.084961  3356.024658  3236.537354\n",
-      "2021-01-24  3119.146484  3369.903076  3231.877686\n",
-      "2021-01-25  3096.519775  3349.702393  3219.257324\n",
-      "2021-01-26  3132.143066  3350.390869  3249.314697]\n"
+      "2021-01-07  3103.875244  3255.646973  3183.352783\n",
+      "2021-01-08  3110.760742  3264.066895  3173.780029\n",
+      "2021-01-09  3069.394775  3263.605957  3176.585938\n",
+      "2021-01-10  3092.879883  3275.094971  3180.134033\n",
+      "2021-01-11  3082.147461  3280.021729  3184.632812\n",
+      "2021-01-12  3102.078125  3302.175781  3204.151123\n",
+      "2021-01-13  3086.716309  3294.481445  3196.488770\n",
+      "2021-01-14  3105.305908  3311.101074  3207.810059\n",
+      "2021-01-15  3096.487305  3314.914551  3200.523926\n",
+      "2021-01-16  3106.058105  3331.040771  3217.055420\n",
+      "2021-01-17  3134.722656  3364.406738  3226.018311\n",
+      "2021-01-18  3088.201660  3335.793457  3208.609375\n",
+      "2021-01-19  3115.896484  3347.588135  3238.604248\n",
+      "2021-01-20  3116.237061  3363.819824  3226.713379\n",
+      "2021-01-21  3105.863281  3385.596436  3241.212646\n",
+      "2021-01-22  3106.853271  3377.485840  3250.418213\n",
+      "2021-01-23  3085.061279  3390.304688  3255.830566\n",
+      "2021-01-24  3090.060791  3393.720215  3255.502930\n",
+      "2021-01-25  3096.748535  3376.555420  3239.009033\n",
+      "2021-01-26  3095.596680  3384.260498  3238.775391]\n"
      ]
     }
    ],
@@ -1106,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -1151,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1169,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -1177,26 +1245,26 @@
      "output_type": "stream",
      "text": [
       "[                    0.1          0.9          0.5\n",
-      "2021-01-07  1675.028687  1786.291382  1732.208374\n",
-      "2021-01-08  1668.661255  1782.718994  1733.668701\n",
-      "2021-01-09  1677.693115  1785.289429  1730.733521\n",
-      "2021-01-10  1684.309937  1793.493652  1733.876587\n",
-      "2021-01-11  1673.302368  1784.088989  1732.772705\n",
-      "2021-01-12  1666.367798  1798.504395  1736.104614\n",
-      "2021-01-13  1673.352051  1815.874634  1725.143311\n",
-      "2021-01-14  1668.871460  1817.390625  1741.362305\n",
-      "2021-01-15  1667.125122  1802.829712  1738.277466\n",
-      "2021-01-16  1668.462524  1815.500122  1737.886963\n",
-      "2021-01-17  1685.492798  1819.410645  1749.690918\n",
-      "2021-01-18  1677.694702  1810.656616  1745.091187\n",
-      "2021-01-19  1680.247192  1837.997070  1773.494385\n",
-      "2021-01-20  1692.805298  1827.459229  1767.529419\n",
-      "2021-01-21  1698.426025  1845.270996  1760.774292\n",
-      "2021-01-22  1707.861084  1840.332886  1764.793457\n",
-      "2021-01-23  1715.499634  1863.902222  1773.113525\n",
-      "2021-01-24  1719.811523  1857.586914  1782.431396\n",
-      "2021-01-25  1714.488770  1855.269043  1781.574951\n",
-      "2021-01-26  1721.883057  1860.849243  1785.219360]\n"
+      "2021-01-07  1679.881470  1763.668213  1723.757568\n",
+      "2021-01-08  1684.970093  1769.465698  1719.822632\n",
+      "2021-01-09  1659.624878  1767.636597  1720.335693\n",
+      "2021-01-10  1678.443115  1780.066162  1726.919434\n",
+      "2021-01-11  1668.081299  1780.199463  1725.360107\n",
+      "2021-01-12  1679.628540  1790.985962  1736.021240\n",
+      "2021-01-13  1668.636108  1784.489014  1732.065796\n",
+      "2021-01-14  1674.419678  1790.535400  1731.337158\n",
+      "2021-01-15  1667.183228  1792.080200  1726.906128\n",
+      "2021-01-16  1671.154297  1798.102905  1732.709717\n",
+      "2021-01-17  1692.093384  1824.358154  1742.937134\n",
+      "2021-01-18  1670.530518  1810.012817  1737.217773\n",
+      "2021-01-19  1687.705811  1820.018921  1757.901855\n",
+      "2021-01-20  1689.093750  1829.603882  1751.361206\n",
+      "2021-01-21  1681.372559  1843.392700  1761.610718\n",
+      "2021-01-22  1690.414062  1843.050659  1773.397705\n",
+      "2021-01-23  1680.970825  1855.756714  1781.634155\n",
+      "2021-01-24  1692.762085  1867.024048  1786.429688\n",
+      "2021-01-25  1696.905029  1861.865112  1783.089966\n",
+      "2021-01-26  1700.337891  1870.259399  1786.662964]\n"
      ]
     }
    ],
@@ -1213,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
