chore: test of display results

--- a/0.DataGathering.ipynb
+++ b/0.DataGathering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "possible-crowd",
+   "id": "advised-contemporary",
    "metadata": {},
    "source": [
     "## Data gathering"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "upset-tutorial",
+   "id": "governmental-retention",
    "metadata": {},
    "source": [
     "First step of this analysis will be stock prices data gathering from one or more sources."
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "executed-migration",
+   "id": "perfect-highlight",
    "metadata": {},
    "source": [
     "By now, only one source will be used: Yahoo! Finance.\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "athletic-childhood",
+   "id": "powerful-outdoors",
    "metadata": {},
    "source": [
     "Gatering data from Yahoo Finance"
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "apparent-geology",
+   "id": "neither-limitation",
    "metadata": {},
    "source": [
     "Target symbols:"
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "strange-pipeline",
+   "id": "fantastic-drove",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "packed-dayton",
+   "id": "suburban-stylus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,18 +66,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bridal-reducing",
+   "id": "covered-metro",
    "metadata": {},
    "source": [
     "Setting dataset record start date and end date:\n",
-    "* start will be just set to 1st Genuary 1900, in order to retrieve the logest possible time series, further data segmentation would be conducted later in the analysis;\n",
+    "* start will be just set to 1st Genuary 1900, in order to retrieve the logest possible time series. A more proper time series data trimming would be conducted later in the analysis;\n",
     "* end time will be today date."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "challenging-storage",
+   "id": "noted-petersburg",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "desirable-antenna",
+   "id": "coupled-bernard",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "little-character",
+   "id": "alpha-colleague",
    "metadata": {},
    "source": [
     "## Gathering data from Yahoo! Finance"
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "authorized-handle",
+   "id": "reported-profession",
    "metadata": {},
    "source": [
     "Data from Yahoo! Finance."
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "accompanied-motivation",
+   "id": "abandoned-dialogue",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "universal-remainder",
+   "id": "retained-blogger",
    "metadata": {},
    "source": [
     "#### ***IBM*** data:"
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "multiple-holly",
+   "id": "vocational-jones",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caroline-debate",
+   "id": "korean-investing",
    "metadata": {},
    "source": [
     "#### ***Apple Inc.*** data:"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "periodic-probe",
+   "id": "considered-guarantee",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "permanent-revolution",
+   "id": "spoken-arctic",
    "metadata": {},
    "source": [
     "#### ***Amazon.com Inc.*** data:"
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "annoying-marsh",
+   "id": "phantom-gibraltar",
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "recorded-token",
+   "id": "powered-starter",
    "metadata": {},
    "source": [
     "#### ***Alphabet Inc.*** data:"
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "gorgeous-fountain",
+   "id": "nutritional-filling",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "domestic-charleston",
+   "id": "beautiful-congress",
    "metadata": {},
    "source": [
     "# Renaming dataframes\n",
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "associate-spain",
+   "id": "naughty-production",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "sunrise-malawi",
+   "id": "stuffed-departure",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "neural-elizabeth",
+   "id": "optical-manhattan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "continent-incident",
+   "id": "direct-patch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "lesser-friendship",
+   "id": "designing-burst",
    "metadata": {},
    "outputs": [],
    "source": []
