chore: refactor third step notebooks

--- a/3_B.DeepAR-StockPricesPredictions_dyn_feat.ipynb
+++ b/3_B.DeepAR-StockPricesPredictions_dyn_feat.ipynb
@@ -21,7 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,6 +80,180 @@
     "* 20 days windowed moving average,\n",
     "* 20 days windowed bollinger band low value,\n",
     "* 20 days windowed bollinger band high value."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### DataFrame to JSON conversion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now I'm going to convert data to JSON file format, in order to feed the DeepAR model correctly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As already announced, I will create two kind of time series, one with a list of dynamic features `dyn_feat`and the other one with only the target column (`Adj Close`) time series. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# initializing train/test dataframe lists to iterate on them\n",
+    "dfs_train = [df_ibm_train, df_aapl_train, df_amzn_train, df_googl_train]\n",
+    "dfs_test = [df_ibm_test, df_aapl_test, df_amzn_test, df_googl_test]\n",
+    "dfs_valid = [df_ibm_valid, df_aapl_valid, df_amzn_valid, df_googl_valid]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating local storage path:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_dir_json = os.path.join(data_dir, 'json')\n",
+    "if not os.path.exists(data_dir_json): # Make sure that the folder exists\n",
+    "    os.makedirs(data_dir_json)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Serializing data to json files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from source_deepar.deepar_utils import ts2DeepARjson_serialize"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dataset with the `Adj Close` time series alone:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dataset containing dynamic features:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Training data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_dir_json_dyn_feat = os.path.join(data_dir_json, 'w_dyn_feat')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_dir_json_train_dyn_feat = os.path.join(data_dir_json_dyn_feat, 'train') # The folder we will use for storing data\n",
+    "if not os.path.exists(data_dir_json_train_dyn_feat): # Make sure that the folder exists\n",
+    "    os.makedirs(data_dir_json_train_dyn_feat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for df, m in zip(dfs_train, mnemonics):\n",
+    "    ts2DeepARjson_serialize(df, data_dir_json_train_dyn_feat, m+'.json', dyn_feat=['Open', '20_ac_bb_l', '20_ac_ma', '20_ac_bb_u'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_dir_json_test_dyn_feat = os.path.join(data_dir_json_dyn_feat, 'test') # The folder we will use for storing data\n",
+    "if not os.path.exists(data_dir_json_test_dyn_feat): # Make sure that the folder exists\n",
+    "    os.makedirs(data_dir_json_test_dyn_feat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for df, m in zip(dfs_test, mnemonics):\n",
+    "    ts2DeepARjson_serialize(df, data_dir_json_test_dyn_feat, m+'.json', dyn_feat=['Open',  '20_ac_bb_l', '20_ac_ma', '20_ac_bb_u'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Validation data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_dir_json_valid_dyn_feat = os.path.join(data_dir_json_dyn_feat, 'validation') # The folder we will use for storing data\n",
+    "if not os.path.exists(data_dir_json_valid_dyn_feat): # Make sure that the folder exists\n",
+    "    os.makedirs(data_dir_json_valid_dyn_feat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for df, m in zip(dfs_valid, mnemonics):\n",
+    "    ts2DeepARjson_serialize(df, data_dir_json_valid_dyn_feat, m+'.json', dyn_feat=['Open', '20_ac_bb_l', '20_ac_ma', '20_ac_bb_u'])"
    ]
   },
   {
@@ -2423,9 +2606,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_p36",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_pytorch_p36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2437,7 +2620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
