--- a/0.DataGathering.ipynb
+++ b/0.DataGathering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "valid-prevention",
+   "id": "indie-listening",
    "metadata": {},
    "source": [
     "## Data gathering"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "yellow-persian",
+   "id": "eleven-emergency",
    "metadata": {},
    "source": [
     "First step of this analysis will be stock prices data gathering from one or more sources."
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sitting-recall",
+   "id": "proud-attention",
    "metadata": {},
    "source": [
     "By now, only one source will be used: Yahoo! Finance.\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "minute-skiing",
+   "id": "thirty-press",
    "metadata": {},
    "source": [
     "Gatering data from Yahoo Finance"
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fatty-highway",
+   "id": "electoral-tablet",
    "metadata": {},
    "source": [
     "Target symbols:"
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "considered-sherman",
+   "id": "caring-corner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "unique-precipitation",
+   "id": "mathematical-height",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "addressed-receiver",
+   "id": "million-pencil",
    "metadata": {},
    "source": [
     "Setting dataset record start date and end date:\n",
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "indian-firewall",
+   "id": "rental-legislature",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "suspended-bread",
+   "id": "thermal-phase",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "surrounded-uruguay",
+   "id": "public-consistency",
    "metadata": {},
    "source": [
     "## Gathering data from Yahoo! Finance"
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "consistent-hardwood",
+   "id": "hispanic-fundamentals",
    "metadata": {},
    "source": [
     "Data from Yahoo! Finance."
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "productive-consistency",
+   "id": "aggregate-needle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mediterranean-quantum",
+   "id": "single-hungary",
    "metadata": {},
    "source": [
     "#### ***IBM*** data:"
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "labeled-uniform",
+   "id": "biological-demographic",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "particular-gambling",
+   "id": "third-gazette",
    "metadata": {},
    "source": [
     "#### ***Apple Inc.*** data:"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "constitutional-watts",
+   "id": "simplified-syndication",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "split-policy",
+   "id": "practical-mexican",
    "metadata": {},
    "source": [
     "#### ***Amazon.com Inc.*** data:"
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "close-failing",
+   "id": "occupied-rotation",
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "optional-flooring",
+   "id": "first-trinity",
    "metadata": {},
    "source": [
     "#### ***Alphabet Inc.*** data:"
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "surprising-meditation",
+   "id": "experienced-serial",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "absent-mining",
+   "id": "vocational-witness",
    "metadata": {},
    "source": [
     "# Renaming dataframes\n",
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "accredited-soldier",
+   "id": "gorgeous-backing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ultimate-afghanistan",
+   "id": "cloudy-green",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "addressed-mattress",
+   "id": "minus-jersey",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "together-cloud",
+   "id": "median-virginia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "velvet-gates",
+   "id": "ruled-prince",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -289,9 +289,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_p36",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_pytorch_p36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -303,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
