--- a/3_A.DeepAR-StockPricesPredictions.ipynb
+++ b/3_A.DeepAR-StockPricesPredictions.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,106 +302,6 @@
    "source": [
     "for df, m in zip(dfs_valid, mnemonics):\n",
     "    ts2DeepARjson_serialize(df, data_dir_json_valid, m+'.json')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Dataset containing dynamic features:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Training data:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 235,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_dir_json_dyn_feat = os.path.join(data_dir_json, 'w_dyn_feat')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 236,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_dir_json_train_dyn_feat = os.path.join(data_dir_json_dyn_feat, 'train') # The folder we will use for storing data\n",
-    "if not os.path.exists(data_dir_json_train_dyn_feat): # Make sure that the folder exists\n",
-    "    os.makedirs(data_dir_json_train_dyn_feat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 237,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for df, m in zip(dfs_train, mnemonics):\n",
-    "    ts2DeepARjson_serialize(df, data_dir_json_train_dyn_feat, m+'.json', dyn_feat=['Open', '20_ac_bb_l', '20_ac_ma', '20_ac_bb_u'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Test data:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 238,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_dir_json_test_dyn_feat = os.path.join(data_dir_json_dyn_feat, 'test') # The folder we will use for storing data\n",
-    "if not os.path.exists(data_dir_json_test_dyn_feat): # Make sure that the folder exists\n",
-    "    os.makedirs(data_dir_json_test_dyn_feat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 239,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for df, m in zip(dfs_test, mnemonics):\n",
-    "    ts2DeepARjson_serialize(df, data_dir_json_test_dyn_feat, m+'.json', dyn_feat=['Open',  '20_ac_bb_l', '20_ac_ma', '20_ac_bb_u'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Validation data:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 240,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_dir_json_valid_dyn_feat = os.path.join(data_dir_json_dyn_feat, 'validation') # The folder we will use for storing data\n",
-    "if not os.path.exists(data_dir_json_valid_dyn_feat): # Make sure that the folder exists\n",
-    "    os.makedirs(data_dir_json_valid_dyn_feat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 241,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for df, m in zip(dfs_valid, mnemonics):\n",
-    "    ts2DeepARjson_serialize(df, data_dir_json_valid_dyn_feat, m+'.json', dyn_feat=['Open', '20_ac_bb_l', '20_ac_ma', '20_ac_bb_u'])"
    ]
   },
   {
@@ -2898,9 +2798,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_p36",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_pytorch_p36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2912,7 +2812,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
