chore: aling repo for local edit

--- a/3_B.DeepAR-StockPricesPredictions_dyn_feat.ipynb
+++ b/3_B.DeepAR-StockPricesPredictions_dyn_feat.ipynb
@@ -83,6 +83,74 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_dir = 'stock_deepar'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The folder we will be used to store csv data\n",
+    "data_dir_csv = os.path.join(data_dir, 'csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The folder we will be used to store json data\n",
+    "data_dir_json = os.path.join(data_dir, 'json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The folder we will be used to store training data in json format\n",
+    "data_dir_json_train = os.path.join(data_dir_json, 'train')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The folder we will be used to store test data in json format\n",
+    "data_dir_json_test = os.path.join(data_dir_json, 'test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The folder we will be used to store validation data in json format\n",
+    "data_dir_json_valid = os.path.join(data_dir_json, 'validation')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -172,22 +240,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_dir_json_dyn_feat = os.path.join(data_dir_json, 'w_dyn_feat')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir_json_train_dyn_feat = os.path.join(data_dir_json_dyn_feat, 'train') # The folder we will use for storing data\n",
-    "if not os.path.exists(data_dir_json_train_dyn_feat): # Make sure that the folder exists\n",
-    "    os.makedirs(data_dir_json_train_dyn_feat)"
+    "data_dir_json_train = os.path.join(data_dir_json, 'dyn_ftr_train') # The folder we will use for storing data\n",
+    "if not os.path.exists(data_dir_json_train): # Make sure that the folder exists\n",
+    "    os.makedirs(data_dir_json_train)"
    ]
   },
   {
@@ -197,7 +256,7 @@
    "outputs": [],
    "source": [
     "for df, m in zip(dfs_train, mnemonics):\n",
-    "    ts2DeepARjson_serialize(df, data_dir_json_train_dyn_feat, m+'.json', dyn_feat=['Open', '20_ac_bb_l', '20_ac_ma', '20_ac_bb_u'])"
+    "    ts2DeepARjson_serialize(df, data_dir_json_train, m+'.json', dyn_feat=['Open', '20_ac_bb_l', '20_ac_ma', '20_ac_bb_u'])"
    ]
   },
   {
@@ -213,9 +272,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir_json_test_dyn_feat = os.path.join(data_dir_json_dyn_feat, 'test') # The folder we will use for storing data\n",
-    "if not os.path.exists(data_dir_json_test_dyn_feat): # Make sure that the folder exists\n",
-    "    os.makedirs(data_dir_json_test_dyn_feat)"
+    "data_dir_json_test = os.path.join(data_dir_json, 'dyn_ftr_test') # The folder we will use for storing data\n",
+    "if not os.path.exists(data_dir_json_test): # Make sure that the folder exists\n",
+    "    os.makedirs(data_dir_json_test)"
    ]
   },
   {
@@ -225,7 +284,7 @@
    "outputs": [],
    "source": [
     "for df, m in zip(dfs_test, mnemonics):\n",
-    "    ts2DeepARjson_serialize(df, data_dir_json_test_dyn_feat, m+'.json', dyn_feat=['Open',  '20_ac_bb_l', '20_ac_ma', '20_ac_bb_u'])"
+    "    ts2DeepARjson_serialize(df, data_dir_json_test, m+'.json', dyn_feat=['Open',  '20_ac_bb_l', '20_ac_ma', '20_ac_bb_u'])"
    ]
   },
   {
@@ -241,9 +300,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir_json_valid_dyn_feat = os.path.join(data_dir_json_dyn_feat, 'validation') # The folder we will use for storing data\n",
-    "if not os.path.exists(data_dir_json_valid_dyn_feat): # Make sure that the folder exists\n",
-    "    os.makedirs(data_dir_json_valid_dyn_feat)"
+    "data_dir_json_valid = os.path.join(data_dir_json, 'dyn_ftr_validation') # The folder we will use for storing data\n",
+    "if not os.path.exists(data_dir_json_valid): # Make sure that the folder exists\n",
+    "    os.makedirs(data_dir_json_valid)"
    ]
   },
   {
@@ -253,7 +312,128 @@
    "outputs": [],
    "source": [
     "for df, m in zip(dfs_valid, mnemonics):\n",
-    "    ts2DeepARjson_serialize(df, data_dir_json_valid_dyn_feat, m+'.json', dyn_feat=['Open', '20_ac_bb_l', '20_ac_ma', '20_ac_bb_u'])"
+    "    ts2DeepARjson_serialize(df, data_dir_json_valid, m+'.json', dyn_feat=['Open', '20_ac_bb_l', '20_ac_ma', '20_ac_bb_u'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## AWS declarations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Defining training data Location"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define IAM role and session\n",
+    "role = sagemaker.get_execution_role()\n",
+    "sagemaker_session = sagemaker.Session()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interval ='D'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Define training data location\n",
+    "s3_data_key = 'df_train_artifacts'\n",
+    "s3_bucket = sagemaker_session.default_bucket()\n",
+    "s3_output_path = \"s3://{}/{}/{}/{}/output\".format(s3_bucket, data_dir, s3_data_key, interval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model image : 495149712605.dkr.ecr.eu-central-1.amazonaws.com/forecasting-deepar:1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Obtain container image URI for SageMaker-DeepAR algorithm, based on region\n",
+    "region = sagemaker_session.boto_region_name\n",
+    "image_name = sagemaker.image_uris.retrieve(\"forecasting-deepar\", region)\n",
+    "print(\"Model image : {}\".format(image_name))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Upload data to S3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Training input preparation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data_dir_json_dyn_feat' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-243-adfd00f0d4fa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mtrain_prefix\u001b[0m   \u001b[0;34m=\u001b[0m \u001b[0;34m'{}/{}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_dir_json\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'train'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtest_prefix\u001b[0m    \u001b[0;34m=\u001b[0m \u001b[0;34m'{}/{}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_dir_json\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'test'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mtrain_prefix_dyn_feat\u001b[0m   \u001b[0;34m=\u001b[0m \u001b[0;34m'{}/{}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_dir_json_dyn_feat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'train'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mtest_prefix_dyn_feat\u001b[0m    \u001b[0;34m=\u001b[0m \u001b[0;34m'{}/{}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_dir_json_dyn_feat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'test'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data_dir_json_dyn_feat' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# *unique* train/test prefixes\n",
+    "train_prefix   = '{}/{}'.format(data_dir_json, 'dyn_ftr_train')\n",
+    "test_prefix    = '{}/{}'.format(data_dir_json, 'dyn_ftr_test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_data_train_dyn_feat = sagemaker_session.upload_data(path=data_dir_json_train, bucket=s3_bucket, key_prefix=train_prefix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_data_test_dyn_feat = sagemaker_session.upload_data(path=data_dir_json_test, bucket=s3_bucket, key_prefix=test_prefix)"
    ]
   },
   {
@@ -2606,9 +2786,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_pytorch_p36",
    "language": "python",
-   "name": "python3"
+   "name": "conda_pytorch_p36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2620,7 +2800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
